--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ html {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  scroll-behavior: smooth;
   font-family: "Poppins", sans-serif;
   color: white;
 }
@@ -28,6 +27,7 @@ h1 {
   font-family: "Gotham", sans-serif;
   font-weight: 900;
   text-align: center;
+  padding: 20px 0;
 }
 
 #task-div {
