--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ li {
 footer {
   text-align: center;
   background-color: #009DF0;
+  padding: 1rem;
   margin-top: auto;
   font-size: .74rem;
 }
