--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ li {
   align-items: center;
   padding: 0 10px;
   background-color: rgba(255, 255, 255, 0.1);
-  margin: 5px 6rem 0 0;
+  margin-top: 5px;
 }
 
 .slide-down {
